--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,34 @@
+body{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.header{
+    background-color: #1f2937;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+}
+
 .logo{
     height: 50px;
     width: 50px;
+}
+
+.link-list{
+    display: flex;
+    gap: 16px;
+    padding-right: 16px;
+    
+   
+}
+
+a{
+    text-decoration: none;
+    font-size: 18px;
+    color: #E5E7EB;
+}
+.header-list-item{
+    list-style-type: none;
+    
 }
